8290711: assert(false) failed: infinite loop in PhaseIterGVN::optimize

Reviewed-by: kvn
Backport-of: 6354a57b5cb85d31ea70a998202470467402b669